New entries should be added at the top

2004-12-04 Fixed multiple bindings per event for TkAgg mpl_connect and
	mpl_disconnect.  Added a "test_disconnect" command line 
	parameter to coords_demo.py  JTM

2004-12-04 Fixed some legend bugs JDH

2004-11-30 Added over command for oneoff over plots.  Eg over(plot, x,
           y, lw=2).  Works with any plot function.
 
2004-11-30 Added bbox property to text - JDH

2004-11-29 Added the over command to the matlab interface.  over
           allows you to add an overlay plot regardless of hold
	   state. - JDH

2004-11-25 Added Printf to mplutils for printf style format string
           formatting in C++ (should help write better exceptions)

2004-11-24 IMAGE_FORMAT: remove from agg and gtkagg backends as its no longer
           used - SC

2004-11-23 Added matplotlib compatible set and get introspection.  See
           set_and_get.py

2004-11-23 applied Norbert's patched and exposed legend configuration
           to kwargs - JDH

2004-11-23 backend_gtk.py: added a default exception handler - SC

2004-11-18 backend_gtk.py: change so that the backend knows about all image
           formats and does not need to use IMAGE_FORMAT in other backends - SC

2004-11-18 Fixed some report_error bugs in string interpolation as
           reported on SF bug tracker- JDH
 
2004-11-17 backend_gtkcairo.py: change so all print_figure() calls render using
           Cairo and get saved using backend_gtk.print_figure() - SC

2004-11-13 backend_cairo.py: Discovered the magic number (96) required for
	   Cairo PS plots to come out the right size. Restored Cairo PS output
	   and added support for landscape mode	- SC

2004-11-13 Added ishold - JDH

2004-11-12 Added many new matlab colormaps - autumn bone cool copper
      flag gray hot hsv jet pink prism spring summer winter - PG

2004-11-11 greatly simplify the emitted postscript code - JV

2004-11-12 Added new plotting functions spy, spy2 for sparse matrix
           visualization - JDH
