@@ -1,4 +1,6 @@
 New entries should be added at the top
+2004-12-02 backend_bases.py, backend_template.py: updated some of the method
+           documentation to make them consistent with each other - SC
 
 2004-12-04 Fixed multiple bindings per event for TkAgg mpl_connect and
 	mpl_disconnect.  Added a "test_disconnect" command line 
